--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "darryldecode/cart": "dev-master",
-        "overtrue/wechat": "~3.1"
+        "overtrue/wechat": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
